<resources>
    <string name="app_name">WordWorld</string>
    <string name="nav">Background Image</string>
    <string name="nav_view">Background Image</string>
    <string name="level_one">Level One</string>
    <string name="level_two">Level Two</string>
    <string name="level_three">Level Three</string>
    <string name="badges">Badges</string>
    <string name="leader_board">Leader Board</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="placeholder_text">Place Holder</string>
    <string name="hint">Buy a Hint</string>
    <string name="instruction_button"/>
    <string name="free_play">Free Play</string>


</resources>