<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:scaleType="centerCrop"
            android:background="@drawable/main_bg_transparency"
            android:contentDescription="@string/background_image" />

    <!-- Header Layout -->
    <include
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

    <Button
            android:id="@+id/level_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_one"
            android:textColor="@color/button_text"
            android:textSize="29sp"
            android:backgroundTint="@color/button_color_1"
            android:layout_marginTop="16dp"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true" />

    <Button
            android:id="@+id/level_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_two"
            android:textColor="@color/button_text"
            android:textSize="29sp"
            android:backgroundTint="@color/button_color_2"
            android:layout_marginTop="16dp"
            android:layout_below="@id/level_one"
            android:layout_centerHorizontal="true" />

    <Button
            android:id="@+id/level_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_three"
            android:textColor="@color/button_text"
            android:textSize="29sp"
            android:backgroundTint="@color/button_color_3"
            android:layout_marginTop="16dp"
            android:layout_below="@id/level_two"
            android:layout_centerHorizontal="true" />

    <Button
            android:id="@+id/badges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badges"
            android:textColor="@color/button_text"
            android:textSize="29sp"
            android:backgroundTint="@color/button_color_1"
            android:layout_marginTop="16dp"
            android:layout_below="@id/level_three"
            android:layout_centerHorizontal="true" />
</RelativeLayout>
